platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_sup_paren_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      22
    ],
    "items": 9,
    "width": 58.05,
    "height": 19.36,
    "x": -29.02,
    "y": 40.32
  },
  {
    "range": [
      24,
      30
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 78.88
  }
]
