platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_unclosed_dollar_diagnostics.snap
---
source: wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 16,
      "end": 17
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
